change: Fix deprecated warnings and incorrect tests