@@ -20,7 +20,7 @@ public class MyQueue<T> extends MyLinkedList<T> {
 	@Override
 	public T pop() {
 		// FIXME
-		return 0;
+		return null;
 	}
 
 	/**
@@ -31,7 +31,7 @@ public class MyQueue<T> extends MyLinkedList<T> {
 	@Override
 	public T peek() {
 		// FIXME
-		return 0;
+		return null;
 	}
 	
 	/**
@@ -49,14 +49,14 @@ public class MyQueue<T> extends MyLinkedList<T> {
 
 		// push some elements onto the Stack
 		for (int i = 0; i < 5; i++) {
-			list.push(new Integer (i * i));
+			list.push(Integer.valueOf(i * i));
 		}
 		int[] answer2 ={0,1,4,9,16};
 		assertIsEqual(list, answer2);
 
 		// delete some numbers in the middle
-		list.remove(new Integer(1));
-		list.remove(new Integer(2));
+		list.remove(Integer.valueOf(1));
+		list.remove(Integer.valueOf(2));
 		int[] answer3 = {0,4,16};
 		assertIsEqual(list, answer3);
 
@@ -67,7 +67,7 @@ public class MyQueue<T> extends MyLinkedList<T> {
 		assertIsEqual(list, answer4);
 
 		// delete the final remaining number
-		list.remove(new Integer(0));
+		list.remove(Integer.valueOf(0));
 		int[] answer5 = {};
 		assertIsEqual(list, answer5);
 
